@@ -12,10 +12,10 @@
 .\"
 .\" $Id$
 .\"
-.TH OCAMLCP 1
+.TH "OCAMLCP" 1
 
 .SH NAME
-ocamlcp \- The OCaml profiling compiler
+ocamlcp, ocamloptp \- The OCaml profiling compilers
 
 .SH SYNOPSIS
 .B ocamlcp
@@ -23,36 +23,62 @@ ocamlcp \- The OCaml profiling compiler
 .I ocamlc options
 ]
 [
-.BI \-p \ flags
+.BI \-P \ flags
+]
+.I filename ...
+
+.B ocamloptp
+[
+.I ocamlopt options
+]
+[
+.BI \-P \ flags
 ]
 .I filename ...
 
 .SH DESCRIPTION
 The
 .B ocamlcp
-command is a front-end to
+and
+.B ocamloptp
+commands are front-ends to
 .BR ocamlc (1)
-that instruments the source code, adding code to record how many times
-functions are called, branches of conditionals are taken, ...
+and
+.BR ocamlopt (1)
+that instrument the source code, adding code to record how many times
+functions are called, branches of conditionals are taken, etc.
 Execution of instrumented code produces an execution profile in the
 file ocamlprof.dump, which can be read using
 .BR ocamlprof (1).
 
 .B ocamlcp
 accepts the same arguments and options as
-.BR ocamlc (1).
+.BR ocamlc (1)
+and
+.B ocamloptp
+accepts the same arguments and options as
+.BR ocamlopt (1).
+There is only one exception: in both cases, the
+.B \-pp
+option is not supported.  If you need to preprocess your source files,
+you will have to do it separately before calling
+.B ocamlcp
+or
+.BR ocamloptp .
 
 .SH OPTIONS
 
 In addition to the
 .BR ocamlc (1)
+or
+.BR ocamlopt (1)
 options,
 .B ocamlcp
-accepts the following option controlling the amount of profiling
-information:
-.TP
-.BI \-p \ letters
-The
+and
+.B ocamloptp
+accept one option to control the kind of profiling information, the
+.BI \-P \ letters
+option. The
 .I letters
 indicate which parts of the program should be profiled:
 .TP
@@ -84,27 +110,31 @@ branch of an exception catcher
 
 .PP
 For instance, compiling with
-.B ocamlcp\ \-pfilm
+.B ocamlcp \-P film
 profiles function calls,
 .BR if \ ... \ then \ ... \ else \ ...,
 loops, and pattern matching.
 
 Calling
 .BR ocamlcp (1)
+or
+.BR ocamloptp (1)
 without the
-.B \-p
+.B \-P
 option defaults to
-.B \-p\ fm
+.BR \-P\ fm ,
 meaning that only function calls and pattern matching are profiled.
 
-Note: due to the implementation of streams and stream patterns as
-syntactic sugar, it is hard to predict what parts of stream expressions
-and patterns will be profiled by a given flag.  To profile a program with
-streams, we recommend using
-.BR ocamlcp\ \-p\ a .
+Note: for compatibility with previous versions,
+.BR ocamlcp (1)
+also accepts the option
+.B \-p
+with the same argument and meaning as
+.BR \-P .
 
 .SH SEE ALSO
 .BR ocamlc (1),
+.BR ocamlopt (1),
 .BR ocamlprof (1).
 .br
 .IR "The OCaml user's manual" ,
